--- a/app/views/assigned_questions/show.html.erb
+++ b/app/views/assigned_questions/show.html.erb
@@ -1,14 +1,37 @@
 <%- model_class = AssignedQuestion -%>
-<div class="page-header clearfix">
-  <h1><%=t 'response_choices_for' %> "<%= resource %>"</h1>
-</div>
+
+<%= content_for(:breadcrumb) do %>
+  <div class="span6">
+    <ul class="breadcrumb">
+      <li><%= link_to t('home'), root_path %><span class="divider">/</span></li>
+      <li><%= link_to parent.organization, [parent.organization] %><span class="divider">/</span></li>
+      <li><%= link_to t('surveys'), [:surveys] %><span class="divider">/</span></li>
+      <li><%= link_to parent.survey, [parent.survey] %><span class="divider">/</span></li>
+      <li><%= link_to parent, [parent.survey,parent] %><span class="divider">/</span></li>
+      <li class="active"><%= resource %></li>
+    </ul>
+  </div>
+  
+  <div class="span6 btn-group">
+    <%= link_to t('add_response'), new_question_response_path(resource.question,assigned_question_id: resource.id, assigned_question_set_id: parent.id), :class => 'btn btn-primary btn-large' if can?(:create, Response) %>
+    <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                [:edit,parent,resource], :class => 'btn btn-large' if can?(:update, resource) %>
+    <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                [parent,resource],
+                :method => 'delete',
+                :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+                :class => 'btn btn-large btn-danger'  if can?(:destroy, resource) %>
+    
+    
+  </div> 
+<% end %>
 
 <table class="table table-striped">
   <thead>
     <tr>
       <th><%=t 'response' %></th>
       <th><%=t 'points' %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -17,29 +40,31 @@
         <td><%= raw(response.to_s) %></td>
         <td><span class="badge badge-inverse"><%= response.points %></span></td>
         <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      "#{url_for([:edit,resource.question,response])}&assigned_question_id=#{resource.id}&assigned_question_set_id=#{parent.id}", :class => 'btn btn-mini' %>
-          <%= link_to t('remove'),
-                      question_response_path(resource.question,response,assigned_question_id: resource.id, assigned_question_set_id: parent.id),
-                      :method => :delete,
-                      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure? This will remove this question from this question set.')),
-                      :class => 'btn btn-mini btn-danger' %>
+          <div class="btn-group">
+            <a class="btn btn-inverse btn-mini dropdown-toggle" data-toggle="dropdown" href="#">
+              <%= t('actions') %>
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <% if can?(:update, response) %>
+                <li>
+                  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                              "#{url_for([:edit,resource.question,response])}&assigned_question_id=#{resource.id}&assigned_question_set_id=#{parent.id}" %>
+                </li>
+              <% end %>
+              
+              <% if can?(:destroy, response) %>
+                <li>
+                  <%= link_to t('remove'),
+                              question_response_path(resource.question,response,assigned_question_id: resource.id, assigned_question_set_id: parent.id),
+                              :method => :delete,
+                              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure? This will remove this question from this question set.')) %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<div class="form-actions">
-  <%= link_to t('add_response'),
-              new_question_response_path(resource.question,assigned_question_id: resource.id, assigned_question_set_id: parent.id), :class => 'btn btn-primary'  %>
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              [resource.assigned_question_sets.first.survey,resource.assigned_question_sets.first], :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              [:edit,parent,resource], :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              [parent,resource],
-              :method => 'delete',
-              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-              :class => 'btn btn-danger' %>
-</div>
