--- a/app/views/assigned_question_sets/_form.html.erb
+++ b/app/views/assigned_question_sets/_form.html.erb
@@ -1,4 +1,17 @@
-<%= simple_form_for [parent,@assigned_question_set], :html => { :class => 'form-horizontal' } do |f| %>
+<%= content_for(:breadcrumb) do %>
+  <div class="span6">
+    <ul class="breadcrumb">
+      <li><%= link_to t('home'), root_path %><span class="divider">/</span></li>
+      <li><%= link_to parent.organization, [parent.organization] %><span class="divider">/</span></li>
+      <li><%= link_to t('surveys'), [:surveys] %><span class="divider">/</span></li>
+      <li><%= link_to parent, [parent] %><span class="divider">/</span></li>
+      <li class="active"><%= resource.new_record? ? t("new_survey") : t("edit_survey") %></li>
+    </ul>
+  </div>
+<% end %>
+
+
+<%= simple_form_for [parent,resource], :html => { :class => 'form-horizontal' } do |f| %>
   <%= f.simple_fields_for :question_set do |question_set_form| %>
     <%= question_set_form.input :organization_id, as: :hidden, input_html: {value: parent.organization_id} %>
     
