--- a/app/views/assigned_question_sets/show.html.erb
+++ b/app/views/assigned_question_sets/show.html.erb
@@ -1,7 +1,28 @@
 <%- model_class = AssignedQuestionSet -%>
-<div class="page-header clearfix">
-  <h1><%= parent %>: <%= @assigned_question_set %></h1>
-</div>
+
+
+<%= content_for(:breadcrumb) do %>
+  <div class="span6">
+    <ul class="breadcrumb">
+      <li><%= link_to t('home'), root_path %><span class="divider">/</span></li>
+      <li><%= link_to parent.organization, [parent.organization] %><span class="divider">/</span></li>
+      <li><%= link_to t('surveys'), [:surveys] %><span class="divider">/</span></li>
+      <li><%= link_to parent, [parent] %><span class="divider">/</span></li>
+      <li class="active"><%= resource %></li>
+    </ul>
+  </div>
+  
+  <div class="span6 btn-group">
+    <%= link_to t('add_question'), new_assigned_question_set_assigned_question_path(resource), :class => 'btn btn-primary btn-large' if can?(:create, AssignedQuestion)  %>
+    <%= link_to t('.edit', :default => t("helpers.links.edit")), [:edit,@assigned_question_set.survey,resource], :class => 'btn btn-large' if can?(:update, @assigned_question_set) %>
+    <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                [@assigned_question_set.survey,resource],
+                :method => 'delete',
+                :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+                :class => 'btn btn-danger btn-large' if can?(:destroy, @assigned_question_set) %>
+    
+  </div> 
+<% end %>
 
 <p><%= @assigned_question_set.question_set.description %></p>
 
@@ -25,36 +46,39 @@
             </a>
             <ul class="dropdown-menu">
               <% assigned_question.question.responses.each do |response| %>
-                <li><%= link_to raw(response.to_s), edit_question_response_path(assigned_question.question,response, assigned_question_id: assigned_question.id, assigned_question_set_id: @assigned_question_set.id) %></li>
+                <% if can?(:update, response) %>
+                  <li><%= link_to raw(response.to_s), edit_question_response_path(assigned_question.question,response, assigned_question_id: assigned_question.id, assigned_question_set_id: @assigned_question_set.id) %></li>
+                <% end %>
               <% end %>
-              <li><%= link_to t('add_response'), new_question_response_path(assigned_question.question,assigned_question_id: assigned_question.id, assigned_question_set_id: @assigned_question_set.id) %></li>
+              <% if can?(:update, Response) %>
+                <li><%= link_to t('add_response'), new_question_response_path(assigned_question.question,assigned_question_id: assigned_question.id, assigned_question_set_id: @assigned_question_set.id) %></li>
+              <% end %>
             </ul>
           </div>
         </td>
         <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      [:edit,resource,assigned_question], :class => 'btn btn-mini' %>
-          <%= link_to t('remove'),
-                      [resource,assigned_question],
-                      :method => :delete,
-                      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure? This will remove this question from this question set.')),
-                      :class => 'btn btn-mini btn-danger' %>
+          
+          <div class="btn-group">
+            <a class="btn btn-inverse btn-mini dropdown-toggle" data-toggle="dropdown" href="#">
+              <%= t('actions') %>
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <% if can?(:update, assigned_question) %>
+                <li>
+                  <%= link_to t('.edit', :default => t("helpers.links.edit")), [:edit,resource,assigned_question] %>
+                </li>
+              <% end %>
+              
+              <% if can?(:destroy, assigned_question) %>
+                <li>
+                  <%= link_to t('remove'), [resource,assigned_question], :method => :delete, :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure? This will remove this question from this question set.')) %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<div class="form-actions">
-  <%= link_to t('add_question'),
-              new_assigned_question_set_assigned_question_path(resource), :class => 'btn btn-primary'  %>
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              parent, :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              [:edit,@assigned_question_set.survey,resource], :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              [@assigned_question_set.survey,resource],
-              :method => 'delete',
-              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-              :class => 'btn btn-danger' %>
-</div>
