--- a/app/views/assigned_surveys/_form.html.erb
+++ b/app/views/assigned_surveys/_form.html.erb
@@ -1,5 +1,17 @@
+<%= content_for(:breadcrumb) do %>
+  <div class="span6">
+    <ul class="breadcrumb">
+      <li><%= link_to t('home'), root_path %><span class="divider">/</span></li>
+      <li><%= link_to parent.organization, [parent.organization] %><span class="divider">/</span></li>
+      <li><%= link_to parent, [parent] %><span class="divider">/</span></li>
+      <li><%= link_to t('assigned_surveys'), [parent,:assigned_surveys] %><span class="divider">/</span></li>
+      <li class="active"><%= resource.new_record? ? t("new") : t("edit") %></li>
+    </ul>
+  </div>  
+<% end %>
+
 <%= simple_form_for [parent,resource], :html => { :class => 'form-horizontal' } do |f| %>
-  <%= f.association :survey, collection: parent.organization.surveys %>
+  <%= f.association :survey, collection: parent.organization.surveys.accessible_by(current_ability) %>
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
