--- a/app/views/assigned_surveys/show.html.erb
+++ b/app/views/assigned_surveys/show.html.erb
@@ -1,7 +1,26 @@
-<%- model_class = AssignedSurvey -%>
-<div class="page-header clearfix">
-  <h1><%= resource %></h1>
-</div>
+<%= content_for(:breadcrumb) do %>
+  <div class="span6">
+    <ul class="breadcrumb">
+      <li><%= link_to t('home'), root_path %><span class="divider">/</span></li>
+      <li><%= link_to parent, parent %><span class="divider">/</span></li>
+      <li><%= link_to t('assigned_surveys'), [parent,:assigned_surveys] %><span class="divider">/</span></li>
+      <li class="active"><%= resource %></li>
+    </ul>
+  </div>  
+  
+  <div class="span6 btn-group">
+    <%= link_to t('add_point_rage'),
+                [:new, @assigned_survey, :point_range], :class => 'btn-large btn-primary btn' if can?(:create, PointRange) %>
+                
+    <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                edit_resource_path, :class => 'btn-large btn' if can?(:update, resource) %>
+    <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                resource_path,
+                :method => 'delete',
+                :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+                :class => 'btn-large btn btn-danger' if can?(:destroy, resource)  %>
+  </div>
+<% end %>
 
 
 <h3><%=t 'point_ranges' %></h3>
@@ -11,7 +30,7 @@
       <th><%= 'name' %></th>
       <th><%= 'low' %></th>
       <th><%= 'high' %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -21,30 +40,26 @@
         <td><%= point_range.low %></td>
         <td><%= point_range.high %></td>
         <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      [:edit,@assigned_survey,point_range], :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      [@assigned_survey,point_range],
-                      :method => :delete,
-                      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-                      :class => 'btn btn-mini btn-danger' %>
+          <div class="btn-group">
+            <a class="btn btn-inverse btn-mini dropdown-toggle" data-toggle="dropdown" href="#">
+              <%=t 'actions' %>
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <% if can?(:update, point_range) %>
+                <li><%= link_to t('.edit', :default => t("helpers.links.edit")),
+                            [:edit,@assigned_survey,point_range] %></li>
+              <% end %>
+              <% if can?(:destroy, point_range) %>
+                <li><%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                            [@assigned_survey,point_range],
+                            :method => :delete,
+                            :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) %></li>
+              <% end %>
+            </ul>
+          </div>
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<div class="form-actions">
-  <%= link_to t('add_point_rage'),
-              [:new, @assigned_survey, :point_range], :class => 'btn-primary btn' %>
-              
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              parent_path, :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_resource_path, :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              resource_path,
-              :method => 'delete',
-              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-              :class => 'btn btn-danger' %>
-</div>
