--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -2,6 +2,7 @@
 <%= content_for(:breadcrumb) do %>
   <div class="span6">
     <ul class="breadcrumb">
+      <li><%= link_to t('home'), root_path %><span class="divider">/</span></li>
       <li><%= link_to resource.organization, [resource.organization] %><span class="divider">/</span></li>
       <li><%= link_to t('divisions'), [current_user, :divisions] %><span class="divider">/</span></li>
       <li><%= link_to resource.division, [current_user, resource.division] %><span class="divider">/</span></li>
@@ -10,23 +11,47 @@
   </div>  
   
   <div class="span6 btn-group">
-    <%= link_to t('download_last_30_days'), division_group_path(parent,@group,format:'csv'), class: 'btn btn-primary btn-large pull-right' %>
-    <%= link_to t('add_member'),
-                new_group_user_path(@group), :class => 'btn btn-primary btn-large pull-right'  %>
+    <%= link_to t('download_last_30_days'), division_group_path(parent,@group,format:'csv'), class: 'btn btn-primary btn-large' %>
+    <%= link_to t('add_member'),new_group_user_path(@group), :class => 'btn btn-primary btn-large' if can? :update, @group  %>
+    
+    <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                [:edit,parent,@group], :class => 'btn btn-large' if can? :update, @group %>
+    <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                group_path(@group),
+                :method => 'delete',
+                :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+                :class => 'btn btn-danger btn-large' if can? :destroy, @group %>
   </div>
 <% end %>
 
 <% if can?(:mange, @group) %>
-  <dl class="dl-horizontal">
-    <% @group.users.each do |user| %>
-      <dt><strong><%= link_to(user,user) %></strong></dt>
-      <dd><%= link_to t('remove'),
-                  [user,user.assigned_group_for(@group.id)],
-                  :method => :delete,
-                  :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure? This will this person as a member of the group.')),
-                  :class => 'btn btn-mini btn-danger' %></dd>
-    <% end %>
-  </dl>
+  <section>
+    <h3><%= t('users') %></h3>
+    <table class="table table-striped">
+      <tbody>
+        <% @group.users.each do |user| %>
+          <tr>
+            <td><%= link_to(user,user) %></td>
+            <td>
+              <div class="btn-group">
+                <a class="btn btn-inverse btn-mini dropdown-toggle" data-toggle="dropdown" href="#">
+                  <%= t('actions') %>
+                  <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                    <li><%= link_to t('remove'),
+                                [user,user.assigned_group_for(@group.id)],
+                                :method => :delete,
+                                :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure? This will this person as a member of the group.')) %></li>
+                    <li><%= link_to t('edit'), [:edit,user] %></li>
+                </ul>
+              </div>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </section>
 <% end %>
 
 <section class="row-fluid">
@@ -56,17 +81,3 @@
     <div class="group-graph" data-division_id="<%= @group.division.id %>" data-group_id="<%= @group.id %>" data-day_range="30"></div>
   </div>
 </section>
-
-<div class="form-actions">
-  <%= link_to t('add_member'),
-              new_group_user_path(@group), :class => 'btn btn-primary'  %>
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              groups_path, :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              [:edit,parent,@group], :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              group_path(@group),
-              :method => 'delete',
-              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-              :class => 'btn btn-danger' %>
-</div>
