--- a/app/views/home/_divisions_index.html.erb
+++ b/app/views/home/_divisions_index.html.erb
@@ -1,5 +1,13 @@
+<%= content_for(:breadcrumb) do %>
+  <div class="span6">
+    <ul class="breadcrumb">
+      <li><%= link_to t('home'), root_path %><span class="divider">/</span></li>
+      <li class="active"><%=t 'choose_division' %></li>
+    </ul>
+  </div>  
+<% end %>
+
 <section id="divisions">
-  <h1><%=t 'choose_division' %></h1>
   <table class="table table-striped">
     <thead>
       <tr>
