--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,56 +1,63 @@
 <%- model_class = Organization -%>
-<div class="page-header clearfix row-fluid">
-  <h1 class="span8"><%= @organization %></h1>
-  <% if current_user.has_role?('admin', @organization) %>
+
+<%= content_for(:breadcrumb) do %>
+  <div class="span6">
+    <ul class="breadcrumb">
+      <li><%= link_to t('home'), root_path %><span class="divider">/</span></li>
+      <li class="active"><%= resource %></li>
+    </ul>
+  </div>  
+  
+  <div class="span6 btn-group">
     <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                edit_organization_path(@organization), :class => 'btn span2 btn-large' %>
+                edit_organization_path(@organization), :class => 'btn btn-large' if can?(:update, resource) %>
     <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                 organization_path(@organization),
                 :method => 'delete',
                 :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-                :class => 'btn btn-danger btn-large span2' %>
-  <% end %>
-</div>
+                :class => 'btn btn-danger btn-large' if can?(:destroy, resource) %>
+  </div>
+<% end %>
 
-<h2><%=t 'metrics' %></h2>
+<% if can?(:update, resource) %>
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:metric_type_id) %></th>
-      <th><%= model_class.human_attribute_name(:decimal_places) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @organization.metrics.each do |metric| %>
+  <h3><%=t 'metrics' %></h3>
+
+  <table class="table table-striped">
+    <thead>
       <tr>
-        <td><%= link_to metric, organization_metric_path(@organization,metric) %></td>
-        <td><%= metric.metric_type %></td>
-        <td><%= metric.decimal_places %></td>
-        <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_organization_metric_path(@organization,metric), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      organization_metric_path(@organization,metric),
-                      :method => :delete,
-                      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-                      :class => 'btn btn-mini btn-danger' %>
-        </td>
+        <th><%= model_class.human_attribute_name(:name) %></th>
+        <th><%= model_class.human_attribute_name(:metric_type_id) %></th>
+        <th><%= model_class.human_attribute_name(:decimal_places) %></th>
+        <th><%=t '.actions', :default => t("helpers.actions") %></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @organization.metrics.each do |metric| %>
+        <tr>
+          <td><%= link_to metric, organization_metric_path(@organization,metric) %></td>
+          <td><%= metric.metric_type %></td>
+          <td><%= metric.decimal_places %></td>
+          <td>
+            <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                        edit_organization_metric_path(@organization,metric), :class => 'btn btn-mini' %>
+            <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                        organization_metric_path(@organization,metric),
+                        :method => :delete,
+                        :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+                        :class => 'btn btn-mini btn-danger' %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<div class="form-actions">
-  <%= link_to t('add_metric'), new_organization_metric_path(resource), :class => 'btn btn-info' %>
-</div>
+  <div class="form-actions">
+    <%= link_to t('add_metric'), new_organization_metric_path(resource), :class => 'btn btn-info' %>
+  </div>
 
 
-<% if current_user.has_role?('admin', @organization) %>
-
-  <h2><%=t 'twitter_accounts' %></h2>
+  <h3><%=t 'twitter_accounts' %></h3>
 
   <table class="table">
     <tbody>
@@ -69,7 +76,7 @@
     <a class="btn btn-info" href="/auth/twitter?force_login=true&amp;organization_id=<%= @organization.to_param %>"><%= t('add_twitter_account') %></a>
   </div>
 
-  <h2><%=t 'google_accounts' %></h2>
+  <h3><%=t 'google_accounts' %></h3>
 
   <table class="table">
     <tbody>
