--- a/app/views/recorded_metrics/_form.html.erb
+++ b/app/views/recorded_metrics/_form.html.erb
@@ -1,4 +1,14 @@
-<%= simple_form_for [parent,@recorded_metric], :html => { :class => 'form-horizontal' } do |f| %>
+<%= content_for(:breadcrumb) do %>
+  <div class="span6">
+    <ul class="breadcrumb">
+      <li><%= link_to t('home'), root_path %><span class="divider">/</span></li>
+      <li><%= link_to parent, parent %><span class="divider">/</span></li>
+      <li class="active"><%= resource.new_record? ? t("new_recorded_metric") : t("edit_recorded_metric") %></li>
+    </ul>
+  </div>  
+<% end %>
+
+<%= simple_form_for [parent,resource], :html => { :class => 'form-horizontal' } do |f| %>
   <%= f.association :metric %>
   <%= f.input :value %>
   <%= f.input :recorded_on, order: [:month, :day, :year] %>
