--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -1,6 +1,7 @@
 <%= content_for(:breadcrumb) do %>
   <div class="span6">
     <ul class="breadcrumb">
+      <li><%= link_to t('home'), root_path %><span class="divider">/</span></li>
       <% if !resource.new_record? %>
         <li><%= link_to resource.organization, [resource.organization] %><span class="divider">/</span></li>
       <% end %>
