--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -1,6 +1,9 @@
+<%- model_class = Survey -%>
+
 <%= content_for(:breadcrumb) do %>
   <div class="span6">
     <ul class="breadcrumb">
+      <li><%= link_to t('home'), root_path %><span class="divider">/</span></li>
       <li class="active"><%= t('surveys') %></li>
     </ul>
   </div>  
@@ -11,14 +14,12 @@
 <% end %>
 
 
-<%- model_class = Survey -%>
-
 <table class="table table-striped">
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:name) %></th>
       <th><%=t 'created' %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -27,14 +28,22 @@
         <td><%= link_to survey, survey %></td>
         <td><%=l survey.created_at %></td>
         <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_survey_path(survey), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      survey_path(survey),
-                      :method => :delete,
-                      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-                      :class => 'btn btn-mini btn-danger' %>
-          <%= link_to t('print'), root_path(survey_id: survey.id, print: true), :class => 'btn btn-primary btn-mini', target: "_blank" %>
+          <div class="btn-group">
+            <a class="btn btn-inverse btn-mini dropdown-toggle" data-toggle="dropdown" href="#">
+              <%= t('actions') %>
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <% if can?(:update, survey) %>
+                <li><%= link_to t('.edit', :default => t("helpers.links.edit")), edit_survey_path(survey) %></li>
+              <% end %>
+              
+              <% if can?(:destroy, survey) %>
+                <li><%= link_to t('.destroy', :default => t("helpers.links.destroy")), survey_path(survey), :method => :delete, :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) %></li>
+              <% end %>
+              <%= link_to t('print'), root_path(survey_id: survey.id, print: true), target: "_blank" %></li>
+            </ul>
+          </div>
         </td>
       </tr>
     <% end %>
