--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -1,14 +1,34 @@
 <%- model_class = Survey -%>
-<div class="page-header clearfix">
-  <h1><%= @survey %></h1>
-</div>
+
+<%= content_for(:breadcrumb) do %>
+  <div class="span6">
+    <ul class="breadcrumb">
+      <li><%= link_to t('home'), root_path %><span class="divider">/</span></li>
+      <li><%= link_to t('surveys'), [:surveys] %><span class="divider">/</span></li>
+      <li class="active"><%= resource %></li>
+    </ul>
+  </div>  
+  
+  <div class="span6 btn-group">
+    <%= link_to t('add_question_set'),
+                new_survey_assigned_question_set_path(@survey), :class => 'btn btn-primary btn-large' if can?(:create, AssignedQuestionSet)  %>
+    <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                edit_survey_path(@survey), :class => 'btn btn-large' if can?(:update, resource) %>
+    <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                survey_path(@survey),
+                :method => 'delete',
+                :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+                :class => 'btn btn-danger btn-large' if can?(:destroy, resource) %>
+  </div>
+<% end %>
+
 
 <table class="table table-striped">
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:name) %></th>
       <th><%=t 'questions' %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -23,36 +43,37 @@
             </a>
             <ul class="dropdown-menu">
               <% assigned_question_set.assigned_questions.each do |assigned_question| %>
-                <li><%= link_to assigned_question, [:edit,assigned_question_set,assigned_question] %></li>
+                <% if can?(:edit, assigned_question) %>
+                  <li><%= link_to assigned_question, [:edit,assigned_question_set,assigned_question] %></li>
+                <% end %>
               <% end %>
-              <li><%= link_to t('add_question'), [:new,assigned_question_set,:assigned_question] %></li>
+              <% if can?(:create, AssignedQuestion) %>
+                <li><%= link_to t('add_question'), [:new,assigned_question_set,:assigned_question] %></li>
+              <% end %>
             </ul>
           </div>
         </td>
         <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_survey_assigned_question_set_path(@survey,assigned_question_set), :class => 'btn btn-mini' %>
-          <%= link_to t('remove'),
-                      survey_assigned_question_set_path(@survey,assigned_question_set),
-                      :method => :delete,
-                      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-                      :class => 'btn btn-mini btn-danger' %>
+          <div class="btn-group">
+            <a class="btn btn-inverse btn-mini dropdown-toggle" data-toggle="dropdown" href="#">
+              <%= t('actions') %>
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <% if can?(:udpate, assigned_question_set) %>
+                <li><%= link_to t('.edit', :default => t("helpers.links.edit")),
+                            edit_survey_assigned_question_set_path(@survey,assigned_question_set) %></li>
+              <% end %>
+              <% if can?(:destroy, assigned_question_set) %>
+                <li><%= link_to t('remove'),
+                            survey_assigned_question_set_path(@survey,assigned_question_set),
+                            :method => :delete,
+                            :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) %></li>
+              <% end %>
+            </ul>
+          </div>
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<div class="form-actions">
-  <%= link_to t('add_question_set'),
-              new_survey_assigned_question_set_path(@survey), :class => 'btn btn-primary'  %>
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              surveys_path, :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_survey_path(@survey), :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              survey_path(@survey),
-              :method => 'delete',
-              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-              :class => 'btn btn-danger' %>
-</div>
