--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,164 +12,5 @@
  *= require bootstrap_and_overrides
  *= require_tree .
 */
- 
-//.content {
-//  background-color: #eee;
-//  padding: 20px;
-//  margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
-//  -webkit-border-radius: 0 0 6px 6px;
-//  -moz-border-radius: 0 0 6px 6px;
-//  border-radius: 0 0 6px 6px;
-//  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-//  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-//  box-shadow: 0 1px 2px rgba(0,0,0,.15);
-//}
 
-@import "compass/css3/background-size";
-@import "compass/typography/text/nowrap";
-@import "compass/typography/text/ellipsis";
-
-.pull-right + .pull-right {
-  margin-right: 20px;
-}
-
-#score {
-  font-size: 30px;
-}
-
-tbody {
-  form {
-    margin: 0;
-  }
-}
-
-form {
-  textarea {
-    height: 34px;
-  }
-}
-
-.tab-pane {
-  .btn-info {
-    margin-bottom: 20px;
-  }
-}
-
-
-.home {
-  #final-score {
-    h1 {
-      margin-bottom: 40px;
-    }
-  }
-  section {
-    clear: both;
-    display: none;
-    
-    @media print {
-      display: block;
-    }
-    margin-bottom: 20px;
-    &.start,
-    &#divisions,
-    &#current-roster {
-      display: block;
-    }
-    
-    .navigate,
-    &#summary,
-    &#current-roster {
-      @media print {
-        display: none;
-      }
-    }
-  }
-
-  td {
-    vertical-align: middle !important;
-    &.score {
-      strong {
-        font-size: 20px;
-      }
-    }
-
-    .btn {
-      @include ellipsis;
-
-      box-sizing: border-box;
-      text-align: center;
-      width: 70px;
-      &.btn-small {
-        width: 48px;
-      }
-      
-      @media print {
-        overflow: visible;
-        width: auto;
-      }
-    }
-  }
-}
-
-
-.navbar-inner {
-  .brand {
-    padding-bottom: 0 !important;
-    padding-top: 0 !important;
-    line-height: 38px !important;
-    img {
-      height: 38px;
-    }
-//    @include background-size(contain);
-//    
-//    background: image-url('logos/pittsburgh-pirates.png') no-repeat 0 0 scroll transparent;
-//    display: block;
-//    padding-left: 60px !important;
-  }
-}
-
-.btn {
-  @include nowrap;
-}
-
-.group-graph,
-.graph {
-  min-height: 400px;
-}
-
-.page-header {
-  padding-top: 18px;
-}
-
-@media (max-width: 480px) {
-  .table {
-    tr {
-      td {
-        font-size: 11px !important
-      }
-    }
-  }
-}
-
-.print-only {
-  display: none;
-}
-
-@media print {
-  footer,
-  nav {
-    display: none !important;
-  }
-  
-  span.print-only {
-    display: inline;
-  }
-  
-  #footnotes_debug {
-    display: none !important;
-  }
-  
-  .btn-print {
-    display: none !important;
-  }
-}
+@import "base";
