--- a/app/views/responses/_form.html.erb
+++ b/app/views/responses/_form.html.erb
@@ -27,7 +27,7 @@
 
   <%= f.input :points %>
   <%= f.input :alert %>
-  <%= f.input :position, input_html: { value: (resource.position || (parent.responses.last ? (parent.responses.last.position || 0) + 1 : 1)) }, hint: t('position_hint') %>
+  <%#= f.input :position, input_html: { value: (resource.position || (parent.responses.last ? (parent.responses.last.position || 0) + 1 : 1)) }, hint: t('position_hint') %>
   
   <% if params[:assigned_question_id] %>
     <%= hidden_field_tag :assigned_question_id, params[:assigned_question_id] %>
