--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,7 +6,7 @@
   <div class="form-inputs">
     <%= f.input :name %>
     <%= f.input :email, :required => true, :autofocus => true %>
-    <%#= f.association :default_division, collection: (current_user.divisions.all + current_user.admined_divisions) %>
+    <%= f.association :default_division, collection: (current_user.divisions.all + current_user.admined_divisions) %>
     <%= f.input :language, collection: Locale.all.map{ |locale| [locale.name,locale.code] }, include_blank: false %>
     <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
     <%= f.input :password_confirmation, :required => false %>
