--- a/app/views/divisions/index.html.erb
+++ b/app/views/divisions/index.html.erb
@@ -27,7 +27,7 @@
     <div class="tab-content">
       <% parent.divisions_with_admin_access.each_with_index do |division,i| %>
         <div class="tab-pane <%= i == 0 ? 'active' : '' %>" id="<%= division.to_s.parameterize %>">
-          <%= link_to t('delete'), [current_user,division], class: 'btn btn-large btn-danger pull-right', method: "delete", confirm: "Are you sure you want to delete this group?" if can?(:destroy,division) %>
+          <%= link_to t('delete'), division, class: 'btn btn-large btn-danger pull-right', method: "delete", confirm: "Are you sure you want to delete this group?" if can?(:destroy,division) %>
           <%= link_to t('leaderboards'), division, class: 'btn btn-large btn-info pull-right' %>
           <%= link_to t('add_group'), [:new,division,:group], class: 'btn btn-large btn-info pull-right' if can?(:manage,division) %>
           <%= link_to t('surveys'), [division,:assigned_surveys], class: 'btn btn-large btn-info pull-right' if can?(:manage,division) %>
