--- a/app/views/divisions/index.html.erb
+++ b/app/views/divisions/index.html.erb
@@ -30,6 +30,7 @@
          <%= link_to t('leaderboards'), division, class: 'btn btn-large btn-info pull-right' %>
          <%= link_to t('add_group'), [:new,division,:group], class: 'btn btn-large btn-info pull-right' if can?(:manage,division) %>
          <%= link_to t('surveys'), [division,:assigned_surveys], class: 'btn btn-large btn-info pull-right' if can?(:manage,division) %>
+         <%= link_to t('take_survey'), root_path(division_id: division.id), class: 'btn btn-large btn-info pull-right' if can?(:manage,division) %>
          <table class="table table-striped">
            <thead>
              <tr>
