--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -4,9 +4,9 @@
   <span class="icon-bar"></span>
 </a>
 <% unless icon_image_tag %>
-  <%= link_to "Recovery Tracker", root_path, :class => 'brand' %>
+  <%= link_to "Performance Unlimited", root_path, :class => 'brand' %>
 <% else %>
-  <%= link_to "#{icon_image_tag} Recovery Tracker".html_safe, root_path, :class => 'brand' %>
+  <%= link_to "#{icon_image_tag} Performance Unlimited".html_safe, root_path, :class => 'brand' %>
 <% end %>
 <div class="nav-collapse">
   <ul class="nav">
